Created Header Component

--- a/index.html
+++ b/index.html
@@ -9,6 +9,44 @@
     <title>Cards</title>
 </head>
 <body>
+    <!-- Header Component -->
+    <div class="header_container">
+        <!--Basic Header  -->
+        <div class="component">
+            <header class="header">
+                <div class="header_align-start ml-5"><i class="fa fa-bars"></i></div>
+                <div class="header_title">Components</div>
+                <div class="header_icons mr-5">
+                    <div><i class="fa fa-share"></i></div>
+                    <div><i class="fa fa-download"></i></div>
+                    <div><i class="fa fa-save"></i></div>
+                </div>
+            </header>
+            <h3 class="component_name">Basic Header(Just Give header a class "fixed" and it will be fixed) </h3>
+        </div>
+
+        <!-- Short Header -->
+        <div class="component short">
+            <header class="header">
+                <div class="header_align-start ml-5"><i class="fa fa-bars"></i></div>
+                <div class="header_title">Components</div>
+                <div class="header_icons mr-5">
+                    <div><i class="fa fa-download"></i></div>
+                </div>
+            </header>
+            <h3 class="component_name">Short Header(Just Give header a class "fixed" and it will be fixed) </h3>
+        </div>
+
+        <!-- Short, Always Collapsed -->
+        <div class="component collapsed">
+            <header class="header bottom-right-curve-border">
+                <div class="header_align-start"><i class="fa fa-bars"></i></div>
+                <div><i class="fa fa-download"></i></div>
+            </header>
+            <h3 class="component_name">Always&nbsp;Collapsed</h3>
+        </div>
+    </div>
+
     <!-- Cards -->
      <h1>Cards Component</h1> 
      <div class="cards">
