Badge Component Added

--- a/index.html
+++ b/index.html
@@ -228,5 +228,14 @@
             <h3 class="component_name">Chips With Input Field</h3>
         </div>
     </div>
+
+    <h1>Badge Component</h1>
+    <div class="container">
+        <div>Text with a badge<span class="badge badge_text circle-border">3</span></div>
+        <div class="bigger_text"> Bigger Text with a badge<span class="badge badge_text circle-border">3</span></div>
+        <Button class="varaint-bg">Button</Button><span class="badge badge_btn_right circle-border">3</span>
+        <Button class="varaint-bg">Button</Button><span class="badge badge_btn_left circle-border">3</span>
+        <div><i class="big_icon fa fa-home" aria-hidden="true"></i><span class="badge badge_icon circle-border">3</span></div>
+    </div>
 </body>
 </html>
