--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                     </div>
                 </div>
             </div>
-            <h3 class="component_name">Title on Image</h3> 
+            <h3 class="component_name">Horizontal Image and Text</h3> 
         </div> 
     </div> 
 
