Added Drawer Component

--- a/index.html
+++ b/index.html
@@ -265,6 +265,19 @@
         <div><i class="big_icon fa fa-home" aria-hidden="true"></i><span class="badge badge_icon circle-border">3</span></div>
     </div>
 
-    <!--  -->
+    <!-- Drawer Component -->
+    <h1>Drawer Component</h1>
+    <div class="component">
+        <div class="box ml-5">
+            <div class="drawer_title mt-2 mb-1 pl-2">Title</div>
+            <div class="drawer_subtitle mb-2 pl-2">Subtitle</div>
+            <div class="drawer_content mb-2 pl-2">
+                <div class="mb-1 drawer_text p-1"><i class="fa fa-inbox" ></i> <span class="ml-3">Inbox </span></div>
+                <div class="mb-1 drawer_text p-1"><i class="fa fa-star" ></i>  <span class="ml-3">Star</span></div>
+                <div class="mb-1 drawer_text p-1"><i class="fa fa-envelope " ></i> <span class="ml-3">Sent Mail</span></div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
